Fixed some typos in the CORBA files and updated the client java player side